--- a/diplom.ipynb
+++ b/diplom.ipynb
@@ -30,7 +30,8 @@
         "3. Произвести предобработку набора данных.\n",
         "4. Провести разведывательный анализ данных и выявить основные закономерности.\n",
         "5. Построить несколько моделей машинного обучения.\n",
-        "6. Спроектировать процесс предсказания"
+        "6. Спроектировать процесс предсказания\n",
+        "7. Бонус"
       ]
     },
     {
@@ -27455,131 +27456,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 493,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>аэрофлот</th>\n",
-              "      <th>газпром</th>\n",
-              "      <th>транснефть</th>\n",
-              "      <th>никель</th>\n",
-              "      <th>роснефть</th>\n",
-              "      <th>золото</th>\n",
-              "      <th>нефть</th>\n",
-              "      <th>пик</th>\n",
-              "      <th>медь</th>\n",
-              "      <th>магнит</th>\n",
-              "      <th>...</th>\n",
-              "      <th>ммк</th>\n",
-              "      <th>татнефть</th>\n",
-              "      <th>фосагро</th>\n",
-              "      <th>алроса</th>\n",
-              "      <th>олово</th>\n",
-              "      <th>полиметалл</th>\n",
-              "      <th>нлмк</th>\n",
-              "      <th>русснефть</th>\n",
-              "      <th>лср</th>\n",
-              "      <th>юнипро</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0.064861</td>\n",
-              "      <td>0.050164</td>\n",
-              "      <td>0.056533</td>\n",
-              "      <td>0.07007</td>\n",
-              "      <td>0.063112</td>\n",
-              "      <td>0.092288</td>\n",
-              "      <td>0.062581</td>\n",
-              "      <td>0.080228</td>\n",
-              "      <td>0.071836</td>\n",
-              "      <td>0.069429</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0.064816</td>\n",
-              "      <td>0.059004</td>\n",
-              "      <td>0.059126</td>\n",
-              "      <td>0.056113</td>\n",
-              "      <td>0.068817</td>\n",
-              "      <td>0.06529</td>\n",
-              "      <td>0.06253</td>\n",
-              "      <td>0.061223</td>\n",
-              "      <td>0.064819</td>\n",
-              "      <td>0.051855</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>1 rows × 39 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   аэрофлот   газпром  транснефть   никель  роснефть    золото     нефть  \\\n",
-              "0  0.064861  0.050164    0.056533  0.07007  0.063112  0.092288  0.062581   \n",
-              "\n",
-              "        пик      медь    магнит  ...       ммк  татнефть   фосагро    алроса  \\\n",
-              "0  0.080228  0.071836  0.069429  ...  0.064816  0.059004  0.059126  0.056113   \n",
-              "\n",
-              "      олово  полиметалл     нлмк  русснефть       лср    юнипро  \n",
-              "0  0.068817     0.06529  0.06253   0.061223  0.064819  0.051855  \n",
-              "\n",
-              "[1 rows x 39 columns]"
-            ]
-          },
-          "execution_count": 493,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "median_value2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 343,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "startday      интер    золото       пик      медь    яндекс   газпром       втб  \\\n",
-            "0  0.08877  0.123605  0.088334  0.072355  0.058498  0.049389  0.069921   \n",
-            "\n",
-            "    фосагро      ммк   серебро  ...  роснефть    алроса       еэс  северсталь  \\\n",
-            "0  0.065371  0.06521  0.090628  ...  0.065615  0.055829  0.075868     0.06632   \n",
-            "\n",
-            "      лента  сургутнефтегаз       афк     олово    никель  транснефть  \n",
-            "0  0.071448        0.055886  0.048152  0.125994  0.046302    0.037396  \n",
-            "\n",
-            "[1 rows x 34 columns]\n"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "#analiz_prod(df_start_product,1)"
+        "Проведем некоторые операции с массивом медиан, чтобы корректно брались данные."
       ]
     },
     {
@@ -27625,12 +27505,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Так как очередность столбцом может отличаться от X_train, а это критично для модели, пришлось с помощью присоединения к X_train сделать необходимую очередность столбцов.\n",
+        "Элегантней решения не нашел. )"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 406,
       "metadata": {},
       "outputs": [],
       "source": [
         "new_df = pd.concat([X_train.iloc [[0]], ton_day])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Функция для дополнительных новостей, используем ее только после функции start_of_day."
       ]
     },
     {
@@ -27664,6 +27559,13 @@
         "                #print('ton_day4',ton_day)\n",
         "                #print('new_df',new_df)\n",
         "                print('predict time:',time_for_production[i+1], metamodel.predict(new_df.iloc [[1]]))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Запустим прогноз и посмотрим на состав прогноза за месяц, многи ли будет разворотов."
       ]
     },
     {
@@ -27886,9 +27788,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Сложно анализировать такие результаты. :)\n",
+        "Сложно анализировать такие результаты. :) \n",
         "\n",
-        "Предсказание только вверх. Но всё таки сделаю вывод:\n",
+        "Предсказание только вверх. Но всё таки можно сделать вывод:\n",
         "![Индекс РТС Октябрь 2023](Rts_oct.jpg)"
       ]
     },
@@ -27904,7 +27806,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "А теперь бонусный модуль, пока вносил последнии правки для отправки на проверку, решил таки проверить еще одну модель(Бэггинг: случайный лес. ) на трейниговой части она показала очень хорошие результаты и надеюсь на прогнозы отличные от 1. ))"
+        "## 7. Бонус"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "При начале работы над данным проектом, никакого бонуса не предполагалось, он родился случайно после финальной корректировки. И этот бонус скорее для меня, а не для проверяющих. Не давали мне покоя показатели на трейнинговой выборке модели Бэггинг: случайный лес. В связи с этим решил ее проверить тоже и очень надеюсь на прогнозы отличные от 1. ))"
       ]
     },
     {
@@ -28188,6 +28097,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Целых 7 сделок вместо одной.)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "![Индекс РТС Октябрь 2023](Rts2_oct.jpg)"
       ]
     },
@@ -28323,23 +28239,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 76,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'short'"
-            ]
-          },
-          "execution_count": 76,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "rtsi_oct['position'].iloc[0]"
+        "Заменим запятые и приведем строковые данные к float"
       ]
     },
     {
@@ -28355,13 +28258,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 83,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "rtsi_oct['<OPEN>']=rtsi_oct['<OPEN>'].astype(float)\n",
-        "rtsi_oct['<CLOSE>']=rtsi_oct['<CLOSE>'].astype(float)\n"
+        "Посчитаем общую прибыль как сумму всех сделок."
       ]
     },
     {
